# password-vault

./: Cargo.toml  Makefile  docker-compose.yml
app/: Cargo.toml
app/src/: lib.rs  main.rs
app/src/configs/: database.rs  env.rs  mod.rs  redis.rs
app/src/constants/: art.rs
app/src/dtos/: app_state.rs  graphql_context.rs  mod.rs  response.rs
app/src/middlewares/: auth.rs  trace.rs
app/src/models/: mod.rs  password.rs  password_dtos.rs  recovery_code.rs  recovery_code_dtos.rs  session.rs  session_dtos.rs  user.rs  user_dtos.rs
app/src/routes/: mod.rs
app/src/routes/graphql/: mod.rs  mutation.rs  query.rs  service_schema.rs
app/src/routes/health/: mod.rs
app/src/services/: crypto.rs  mod.rs
app/src/services/auth/: auth.rs  mod.rs
app/src/services/crypto/: crypto.rs  crypto_test.rs  mod.rs
app/src/services/password/: mod.rs  password.rs
app/src/utils/: common.rs  error.rs
app/src/validators/: password.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250227_191111_create_table_password.rs  m20250227_191111_create_table_session.rs  m20250227_191111_create_table_user.rs  m20250227_191649_create_table_recovery_code.rs  m20250304_182633_update_table_password.rs  m20250306_191038_update_table_password.rs
