[workspace]
members = [
    "migration",
    "app"
]
resolver = "2"

[workspace.dependencies]
axum = "0.8"
async-graphql = { version = "7.0", features = [
    "chrono",
    "decimal",
    "log",
    "tracing",
    "uuid",
] }
async-graphql-axum = "7.0"

tokio = { version = "1.43", features = ["full"] }

sea-orm = { version = "1.1", features = [
    "debug-print",
    "postgres-array",
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-uuid"
] }
sea-orm-migration = "1.1"
redis = { version = "0.29", features = ["tokio-comp", "r2d2", "uuid", "json"] }
r2d2 = "0.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.3"
thiserror = "2"

data-encoding = "2.8"
ring = "0.17"
rand = "0.9"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"









