[package]
name = "app"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }

tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tokio = { workspace = true }

sea-orm = { workspace = true }
redis = { workspace = true }
r2d2 = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }

chrono = { workspace = true }
validator = { workspace = true }
jsonwebtoken = {workspace = true}
thiserror = {workspace = true}

data-encoding = {workspace = true}
ring = {workspace = true}
rand = {workspace = true}
aes-gcm = {workspace = true}
chacha20poly1305 = {workspace = true}
argon2 = {workspace = true}
base64 = {workspace = true}
hmac = {workspace = true}
sha2 = {workspace = true}

